parser/grammar.ebnf
(* sol3 EBNF language grammar v0.0.1 *)
(* License: UPL-1.0 (https://spdx.org/licenses/UPL-1.0.html) *)
(* > Generated from Tree-Sitter "grammar.json" on 2026-07-21 *)
(* > Note that this grammar does not model the language's significant *)
(* > indentation and is for informational purposes only. *)

source_file ::= ( script_decl |  module_decl |  application_decl |  ( experimental_module_decl (  ( experimental_module_decl |  module_decl )  )*  )  |  ( kernel_module_decl (  ( kernel_module_decl |  experimental_module_decl |  module_decl )  )*  )  ) 

comment ::= (  ( '#'  .* )  ) 

doc_string ::= _multiline_string_literal

keyword ::= ( 'application'  |  'module'  |  'exposing'  |  'let'  |  'importing'  |  'type'  |  'format'  |  'yield'  |  'reporting'  |  'debug'  |  'expect'  |  '_'  ) 

operator ::= (  ( '->'  |  '|>'  |  '='  |  '::'  |  ':'  |  '=='  |  '!='  |  'or'  |  'and'  |  '!'  )  ) 

script_decl ::= ( (  ( script_signature )?  )  ( _toplevel_decl )+  ) 

script_signature ::= ( import_decl )+ 

module_decl ::= ( (  module_signature )  (  _toplevel_decl )*  ) 

experimental_module_decl ::= ( (  experimental_module_signature )  (  _toplevel_decl )*  ) 

kernel_module_decl ::= ( (  kernel_module_signature )  (  _toplevel_decl )*  ) 

application_decl ::= ( (  application_signature )  (  _toplevel_decl )*  ) 

module_signature ::= ( ( ( doc_string )+  )?  'module'  ( ( package_identifier (  ':'  )  module_identifier )  |  (  [a-z0-9_]+(\/[a-z0-9_]+)* )  )  ( ( ( export_decl )+  |  ( import_decl )+  |  ( ( ( export_decl )+  )?  ( import_decl )+  )  )  )?  ) 

package_identifier ::= [a-zA-Z][a-zA-Z0-9_\-]*(\.[a-zA-Z][a-zA-Z0-9_\-]*)+

module_identifier ::= (  [a-z0-9_]+(\/[a-z0-9_]+)* ) 

experimental_module_signature ::= ( ( ( doc_string )+  )?  'module'  ( (  'experimental'  )  (  ':'  )  module_identifier )  ( ( ( export_decl )+  |  ( import_decl )+  |  ( ( ( export_decl )+  )?  ( import_decl )+  )  )  )?  ) 

kernel_module_signature ::= ( ( ( doc_string )+  )?  'module'  ( (  'sol3'  )  (  ':'  )  module_identifier )  ( ( ( export_decl )+  |  ( import_decl )+  |  ( ( ( export_decl )+  )?  ( import_decl )+  )  )  )?  ) 

application_signature ::= ( ( doc_string )+  'application'  ( package_identifier (  ':'  )  module_identifier )  ( ( ( export_decl )+  |  ( import_decl )+  |  ( ( ( export_decl )+  )?  ( import_decl )+  )  )  )?  ) 

import_decl ::= ( 'importing'  '{'  (  import_entry )*  '}'  ) 

import_entry ::= ( (  import_alias )  ':'  (  import_module_identifier )  ( (  import_meta )  )?  ) 

import_alias ::= identifier

import_module_identifier ::= ( '"'  ( ( ( 'sol3'  |  'experimental'  |  package_identifier )  ':'  )  )?  module_identifier '"'  ) 

import_meta ::= ( '{'  ( import_capabilities )?  '}'  ) 

import_capabilities ::= ( 'capabilities'  ':'  '{'  (  capability_identifier )*  '}'  ) 

export_decl ::= ( 'exposing'  '{'  ( export_entry )+  '}'  ) 

export_entry ::= ( (  identifier )  ( ( ':'  (  identifier )  )  )?  ) 

_toplevel_decl ::= ( let_decl |  expect_decl ) 

_kernel_toplevel_decl ::= _toplevel_decl

let_decl ::= ( 'let'  (  identifier )  '='  (  _complex_expr )  ) 

expect_decl ::= ( 'expect'  (  comparison_expr )  (  ( ( 'reporting'  _expression )  )?  )  ) 

_complex_expr ::= ( _expression |  function_expr ) 

_expression ::= ( _primitive_value |  identifier ) 

comparison_expr ::= ( (  _expression )  ( '=='  |  '!='  )  (  _expression )  ) 

function_expr ::= ( '{'  (  function_params )  '->'  (  (  _toplevel_decl )*  )  (  _complex_expr )  '}'  ) 

function_params ::= ( ( dont_care |  identifier |  ignore )  )+ 

_primitive_value ::= ( string_literal |  int_literal |  decimal_literal ) 

identifier ::= [a-z][a-zA-Z0-9_]*

int_literal ::= 0|-?[1-9][0-9]*

decimal_literal ::= 0|-?[0-9]+\.\d+

dont_care ::= '_' 

ignore ::= (  ( '_'  [a-z][a-zA-Z0-9_]* )  ) 

capability_identifier ::= (  ( '+'  [A-Z][a-zA-Z]* )  ) 

string_literal ::= ( '"'  (  ( [^\\"\n] |  \\(\^)?. |  \\\n\s*\\ )  )*  '"'  ) 

_multiline_string_literal ::= (  ( '"""'  (  ( (  (  ( ( [^\\"] |  "[^"] |  ""[^"] )  )+  )  )  |  \\(u\{[0-9A-Fa-f]{4,6}\}|[nrt\"'\\]) |  \\(u\{[^}]*\}|[^nrt\"'\\]) )  )*  '"""'  )  ) 
